--- a/brie-5 Site web pour une entreprise de location/style/home.css
+++ b/brie-5 Site web pour une entreprise de location/style/home.css
@@ -42,8 +42,8 @@
     display: block;
   }
   #checkNav:checked ~ #checkNavBtn {
-    background-color: transparent;
-    border-bottom: 3px solid transparent;
+    background-color: rgba(0, 0, 0, 0);
+    border-bottom: 3px solid rgba(0, 0, 0, 0);
   }
 }
 
@@ -70,12 +70,16 @@
 }
 
 #topNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #000;
   position: fixed;
   width: 100%;
   border-bottom: 3px solid #A98B69;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   z-index: 1;
 }
 
@@ -101,6 +105,8 @@
 #topNav ul {
   list-style: none;
   color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 24px 0;
 }
@@ -145,6 +151,8 @@
 }
 
 .sideNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: fixed;
   margin-top: 200px;
@@ -152,7 +160,11 @@
 }
 
 .sideNav .themeContainer {
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   background-color: #fff;
   border: 2px solid #000;
@@ -163,8 +175,14 @@
 }
 
 .sideNav .themeContainer .theme {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   padding: 8px;
 }
@@ -191,7 +209,8 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 30%;
 }
 
@@ -215,7 +234,8 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 30%;
 }
 
@@ -225,7 +245,8 @@
   background-color: #000;
   position: relative;
   top: 37%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 42.5%;
 }
 
@@ -269,11 +290,15 @@ footer {
 }
 
 footer .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 40px 10% 40px 10%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 18px;
 }
 
@@ -307,6 +332,8 @@ footer .contact .rightDiv div {
 }
 
 footer .contact .rightDiv ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
@@ -335,8 +362,11 @@ footer .contact .rightDiv ul li img {
 
 footer .links {
   padding: 16px 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   font-size: 16px;
   font-weight: bold;
   border-bottom: 1px solid #000;
@@ -361,6 +391,8 @@ footer .footerButtom p {
 }
 
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #352623;
   height: 100%;
@@ -426,3 +458,4 @@ header .imgDiv .discriptiondiv .lastParagraph {
 section {
   height: 500px;
 }
+/*# sourceMappingURL=home.css.map */
