--- a/brie-5 Site web pour une entreprise de location/style/inscription.css
+++ b/brie-5 Site web pour une entreprise de location/style/inscription.css
@@ -42,8 +42,8 @@
     display: block;
   }
   #checkNav:checked ~ #checkNavBtn {
-    background-color: transparent;
-    border-bottom: 3px solid transparent;
+    background-color: rgba(0, 0, 0, 0);
+    border-bottom: 3px solid rgba(0, 0, 0, 0);
   }
 }
 
@@ -70,12 +70,16 @@
 }
 
 #topNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background-color: #000;
   position: fixed;
   width: 100%;
   border-bottom: 3px solid #A98B69;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   z-index: 1;
 }
 
@@ -101,6 +105,8 @@
 #topNav ul {
   list-style: none;
   color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 24px 0;
 }
@@ -145,6 +151,8 @@
 }
 
 .sideNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: fixed;
   margin-top: 200px;
@@ -152,7 +160,11 @@
 }
 
 .sideNav .themeContainer {
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   background-color: #fff;
   border: 2px solid #000;
@@ -163,8 +175,14 @@
 }
 
 .sideNav .themeContainer .theme {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   padding: 8px;
 }
@@ -191,7 +209,8 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 30%;
 }
 
@@ -215,7 +234,8 @@
   background-color: #000;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 30%;
 }
 
@@ -225,7 +245,8 @@
   background-color: #000;
   position: relative;
   top: 37%;
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   left: 42.5%;
 }
 
@@ -269,11 +290,15 @@ footer {
 }
 
 footer .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 40px 10% 40px 10%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 18px;
 }
 
@@ -307,6 +332,8 @@ footer .contact .rightDiv div {
 }
 
 footer .contact .rightDiv ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
@@ -335,8 +362,11 @@ footer .contact .rightDiv ul li img {
 
 footer .links {
   padding: 16px 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   font-size: 16px;
   font-weight: bold;
   border-bottom: 1px solid #000;
@@ -440,8 +470,12 @@ section .container form h3 {
 }
 
 section .container form .fullName {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 section .container form .fullName .prenom {
@@ -525,8 +559,12 @@ section .container form .dateLabel {
 }
 
 section .container form .birthday {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 section .container form .birthday .year {
@@ -611,8 +649,12 @@ section .container form .country select {
 }
 
 section .container form .emission {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 section .container form .emission .anneeD {
@@ -688,9 +730,13 @@ section .container form .emission .jourD select {
 }
 
 section .container form .carteCredit {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 section .container form .carteCredit .typeCarte {
@@ -737,9 +783,13 @@ section .container form .carteCredit .numeroCarte div {
 }
 
 section .container form .dateCarte {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 section .container form .dateCarte .moisCarte {
@@ -825,10 +875,14 @@ section .container form .codePostal div {
 }
 
 section .container form .conditions {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 section .container form .conditions input {
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   margin: 0 8px;
 }
@@ -838,5 +892,8 @@ section .container form .enregistrerbtn {
 }
 
 section .container form .enregistrerbtn #registerBtn {
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
 }
+/*# sourceMappingURL=inscription.css.map */
